feat: Api error data handle multiple error and eventbus execution error

--- a/packages/locales/src/lang/en/error.json
+++ b/packages/locales/src/lang/en/error.json
@@ -17,5 +17,69 @@
     "error.http.token_invalid": "The token is invalid, please try again.",
     "error.http.token_not_found": "Your account hasn't been signed in.",
     "error.http.user_has_no_permission": "Current user has no privileges",
-    "error.http.user_register_email_exist": "This User Register Email Already Exists."
+    "error.http.user_register_email_exist": "This User Register Email Already Exists.",
+    "error.http.gateway_request_timeout": "网关请求超时",
+    "error.http.gateway_respond_error": "网关返回了错误消息",
+    "error.http.codec_resource_request_error": "设备编解码器codec仓库请求错误",
+    "error.http.codec_resource_format_error": "codec资源的格式不合法",
+    "error.http.duplicated_gateway_eui": "重复添加相同eui的网关",
+    "error.http.duplicated_device_eui": "重复添加相同eui的设备",
+    "error.http.gateway_no_application": "网关未添加任何application",
+    "error.http.gateway_no_device_profile": "网关未添加任何设备profile",
+    "error.http.no_valid_profile_for_device": "网关未提供设备需要的profile",
+    "error.http.device_group_not_found": "未找到设备组",
+    "error.http.device_group_name_exists": "设备组名称已存在",
+    "error.http.device_group_number_limitation": "设备组数量达到最大上限",
+    "error.http.device_list_sheet_structure_error": "批量上传设备列表格式错误",
+    "error.http.device_list_sheet_device_over_limitation": "一次批量上传设备的数量达到最大上限",
+    "error.http.device_list_sheet_no_device": "批量上传至少需要一个设备",
+    "error.http.device_list_sheet_parsing_error": "批量上传设备列表解析错误",
+    "error.http.entity_attribute_min_invalid": "实体属性最小值必须为数字",
+    "error.http.entity_attribute_max_invalid": "实体属性最大值必须为数字",
+    "error.http.entity_attribute_min_greater_than_max": "实体属性最小值大于最大值",
+    "error.http.entity_attribute_min_length_invalid": "实体属性最小长度必须为正整数",
+    "error.http.entity_attribute_max_length_invalid": "实体属性最大长度必须为正整数",
+    "error.http.entity_attribute_min_length_greater_than_max_length": "实体属性最小长度大于最大长度",
+    "error.http.entity_attribute_length_range_invalid": "实体属性长度枚举必须每个长度都是正整数",
+    "error.http.entity_attribute_fraction_digits_invalid": "实体属性小数位数必须为正整数",
+    "error.http.entity_attribute_default_value_invalid": "实体属性默认值与值类型不匹配",
+    "error.http.entity_attribute_optional_invalid": "实体属性可选标志必须是布尔型",
+    "error.http.entity_attribute_enum_invalid": "实体属性枚举必须为键值对类型",
+    "error.http.entity_validation_error": "实体校验错误",
+    "error.http.entity_attribute_key_invalid": "实体属性的Key不在允许的范围内",
+    "error.http.entity_attribute_enum_over_size": "实体属性枚举的大小超过限制",
+    "error.http.entity_attribute_enum_key_or_value_length_greater_than_max_length": "实体属性枚举的Key或值长度超过限制",
+    "error.http.entity_attribute_is_enum_invalid": "实体属性是否枚举属性必须为布尔型",
+    "error.http.entity_attribute_unit_too_long": "实体属性单位太长",
+    "error.http.entity_value_null": "实体值为空",
+    "error.http.entity_value_not_match_type": "实体值与类型不匹配",
+    "error.http.entity_value_less_than_min": "实体值小于允许的最小值",
+    "error.http.entity_value_greater_than_max": "实体值大于允许的最大值",
+    "error.http.entity_value_out_of_range": "实体值不在允许的范围内",
+    "error.http.entity_value_length_shorter_than_min_length": "实体值长度小于允许的最小值",
+    "error.http.entity_value_length_longer_than_max_length": "实体值长度大于允许的最大值",
+    "error.http.entity_value_length_out_of_range": "实体值长度不在允许的范围内",
+    "error.http.entity_value_length_invalid_enum": "实体值长度不在允许的长度选项内",
+    "error.http.entity_value_not_match_format": "实体值与格式化规则不匹配",
+    "error.http.entity_value_invalid_enum": "实体值不在允许的枚举选项内",
+    "error.http.entity_value_validation_error": "实体值校验失败",
+    "error.http.template_name_exists": "设备模板名称已存在",
+    "error.http.topic_exists": "Topic已存在",
+    "error.http.server_not_reachable": "服务不可用",
+    "error.http.server_token_invalid": "服务Token非法",
+    "error.http.server_token_access_denied": "服务Token被拒绝",
+    "error.http.server_data_not_found": "服务找不到模型",
+    "error.http.server_invalid_input_data": "服务输入参数非法",
+    "error.http.server_rate_limit_exceeded": "服务接口限流",
+    "error.http.server_internal_server_error": "服务内部错误",
+    "error.http.server_model_worker_busy": "服务模型处理能力达到上限",
+    "error.http.server_other_error": "服务其他错误",
+    "error.http.device_bind_error": "设备绑定错误",
+    "error.http.msc_api_error": "MSC API 返回了错误码 {msg}",
+    "error.http.msc_another_task_running": "另一个任务已经在运行",
+    "error.http.msc_connection_not_ready": "和MSC平台的连接尚未建立",
+    "error.http.entity_tag_not_found": "标签不存在",
+    "error.http.number_of_entity_tags_exceeded": "创建的标签数量超过上限",
+    "error.http.number_of_tags_per_entity_exceeded": "实体添加的标签数量超过上限",
+    "error.http.entity_tag_name_already_exists": "标签名称已存在"
 }
