feat: new error code intl device_list_sheet_parsing_value_error

--- a/packages/locales/src/lang/en/error.json
+++ b/packages/locales/src/lang/en/error.json
@@ -81,5 +81,6 @@
     "error.http.entity_tag_not_found": "标签不存在",
     "error.http.number_of_entity_tags_exceeded": "创建的标签数量超过上限",
     "error.http.number_of_tags_per_entity_exceeded": "实体添加的标签数量超过上限",
-    "error.http.entity_tag_name_already_exists": "标签名称已存在"
+    "error.http.entity_tag_name_already_exists": "标签名称已存在",
+    "error.http.device_list_sheet_parsing_value_error": "批量上传设备列表值转换错误"
 }
