--- a/packages/locales/src/lang/en/user.json
+++ b/packages/locales/src/lang/en/user.json
@@ -38,5 +38,8 @@
     "user.role.single_device_remove_tip": "Are you sure you want to remove device: {0}?",
     "user.role.single_integration_remove_tip": "After removal, all devices under the integration and independent entities will no longer be accessible. Are you sure you want to remove integration: {0}?",
     "user.role.single_member_remove_tip": "Are you sure you want to remove member: {0}?",
-    "user.role.users_tab_name": "Users"
+    "user.role.users_tab_name": "Users",
+    "user.role.permission_view": "View",
+    "user.role.permission_group_manage": "Device Group Manage",
+    "user.role.permission_manage": "Manage"
 }
